[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/GDScript/Movement/PlayerMovement.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/PlayerComponents.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/CenterScreen.gd" type="Script" id=3]

[sub_resource type="ProceduralSky" id=13]

[sub_resource type="Environment" id=12]
background_mode = 2
background_sky = SubResource( 13 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 1.14

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="PlaneMesh" id=8]
material = SubResource( 4 )
size = Vector2( 30, 40 )

[sub_resource type="PlaneMesh" id=9]
material = SubResource( 4 )
size = Vector2( 30, 40 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 10, 10, 20 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 10, 10, 30 )

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 0.0203553, 0, -0.260018, 0, 0, 0, 0, 0, 0, 0.0193396, 0, -15.0586 ),
"tilts": PoolRealArray( 0, 0 )
}

[sub_resource type="Curve3D" id=6]
bake_interval = 5.0
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -0.00127594, 0, -14.9968, 0, 0, 0, 0, 0, 0, 0.0203553, 0, -24.5265, 0, 0, 0, 0, 0, 0, -15.0821, 0, -24.5265 ),
"tilts": PoolRealArray( 0, 0, 0 )
}

[sub_resource type="Curve3D" id=7]
bake_interval = 5.0
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 0.0193396, 0, -14.9968, 0, 0, 0, 0, 0, 0, 0.0566028, 0, -24.752, 0, 0, 0, 0, 0, 0, 15.1922, 0, -24.752 ),
"tilts": PoolRealArray( 0, 0, 0 )
}

[node name="World" type="Spatial"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[node name="Objects" type="Spatial" parent="."]

[node name="Roof" type="MeshInstance" parent="Objects"]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 10, -20 )
mesh = SubResource( 8 )
skeleton = NodePath("../Floor")

[node name="Floor" type="MeshInstance" parent="Objects"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )
mesh = SubResource( 9 )

[node name="Wall_1" type="MeshInstance" parent="Objects"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 5, -10 )
mesh = SubResource( 2 )

[node name="Wall_2" type="MeshInstance" parent="Objects"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 5, -10 )
mesh = SubResource( 2 )

[node name="Wall_3" type="MeshInstance" parent="Objects"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 5, -35 )
mesh = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="Objects"]
transform = Transform( 1, 0, 0, 0, 0.248707, 0.968579, 0, -0.968579, 0.248707, 0, 16.9194, 10.4449 )

[node name="Paths" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="Path1" type="Path" parent="Paths"]
curve = SubResource( 5 )

[node name="Player" type="PathFollow" parent="Paths/Path1"]
transform = Transform( -1, 0, -6.86304e-05, 0, 1, 0, 6.86317e-05, 0, -0.999981, 0.0203553, 0, -0.260018 )
rotation_mode = 4
loop = false

[node name="PlayerComponents" parent="Paths/Path1/Player" instance=ExtResource( 2 )]

[node name="Camera" parent="Paths/Path1/Player/PlayerComponents" index="0"]
transform = Transform( -0.999848, 0.000304591, 0.0174503, 0, 0.999848, -0.0174527, -0.0174526, -0.0174498, -0.999715, 0, 3, 0 )

[node name="PathL" type="Path" parent="Paths/Path1"]
curve = SubResource( 6 )

[node name="PathR" type="Path" parent="Paths/Path1"]
curve = SubResource( 7 )

[editable path="Paths/Path1/Player/PlayerComponents"]
